deploy/master/etc/envoy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: redirect
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                redirect:
                  https_redirect: true
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          http_filters:
          - name: envoy.router
            confeig: {}

  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/dev/stdout"
          codec_type: AUTO
          stat_prefix: ingress_https
          route_config:
            name: local_route
            virtual_hosts:
            - name: https
              domains:
              - "*"
              routes:
              - match:
                  regex: "^/api/?[^/]*$"
                route:
                  cluster: swagger
              - match:
                  prefix: "/api"
                route:
                  cluster: bff
              - match:
                  prefix: "/"
                route:
                  cluster: api
          http_filters:
          - name: envoy.router
            config: {}
          # - name: envoy.health_check
          #   config:
          #     pass_through_mode: false
          #     headers:
          #     - name: ":path"
          #       exact_match: "/healthz"
          #     - name: "x-envoy-livenessprobe"
          #       exact_match: "healthz"
      tls_context:
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: "/etc/ssl/envoy/localhost.crt"
            private_key:
              filename: "/etc/ssl/envoy/localhost.key"

  clusters:
  - name: api
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      tcp_health_check: {}
    hosts:
    - socket_address:
        address: api
        port_value: 20180
  - name: swagger
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    # http2_protocol_options: {}
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      tcp_health_check: {}
    hosts:
    - socket_address:
        address: swagger
        port_value: 80
  - name: bff
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    # http2_protocol_options: {}
    health_checks:
    - timeout: 5s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      tcp_health_check: {}
    hosts:
    - socket_address:
        address: bff
        port_value: 8080
